--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sse
-version: 3.8.3
+version: 4.0.0-nullsafety
 homepage: https://github.com/dart-lang/sse
 description: >-
   Provides client and server functionality for setting up bi-directional
@@ -7,17 +7,17 @@ description: >-
   requests.
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
-  async: ^2.0.8
-  collection: ^1.0.0
-  logging: '>=0.11.3+2 <2.0.0'
-  pedantic: ^1.4.0
-  stream_channel: '>=1.6.8 <3.0.0'
+  async: ^2.5.0
+  collection: ^1.15.0
+  logging: ^1.0.1
+  pedantic: ^1.11.0
+  stream_channel: ^2.1.0
   shelf: ^1.1.0
 
 dev_dependencies:
-  shelf_static: '>=0.2.8 <2.0.0'
-  test: ^1.5.3
+  shelf_static: ^1.0.0
+  test: ^1.17.0
   webdriver: ^3.0.0
