--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: >-
 repository: https://github.com/dart-lang/sse
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: ^3.1.0
 
 dependencies:
   async: ^2.0.8
